# HITSZ-DataBase-Lab2023

Lab Code/Exp1/sakila-db/: query1.sql  sakila-data.sql
Lab Code/Exp3+4/: PetAdoptionSystem.sql  PetAdoptionSystem_cdm.cdm  PetAdoptionSystem_ldm.ldm  PetAdoptionSystem_pdm.pdm
Lab Code/Exp3+4/PetAdoptionSystem/src/: AdministratorPage.form  AdministratorPage.java  ApplicationForm.form  ApplicationForm.java  CheckMyApplication.form  CheckMyApplication.java  ClientPage.form  ClientPage.java  DatabaseEntry.form  DatabaseEntry.java  DatabaseTableView.form  DatabaseTableView.java  ErrorBox.java  ExamineApplication.form  ExamineApplication.java  FreezeDefreeze.form  FreezeDefreeze.java  LogIn.form  LogIn.java  Main.java  SubmitRevisitRecord.form  SubmitRevisitRecord.java  UserRegister.form  UserRegister.java  ViewMyAccountInfo.form  ViewMyAccountInfo.java  ViewPets.form  ViewPets.java  WelcomePage.form  (+1 more)
Lab Code/Exp5/Exp5/: CMakeLists.txt  extmem.c  main.c  test.c
Lab Code/Exp5/extmem-c/: CoreFunction.c  defines.h  extmem.c  extmem.depend  extmem.layout  test.c
Lab Code/Exp5/extmem-c2/: AuxiliaryFunctions.c  CMakeLists.txt  CoreFunction.c  extmem.cbp  extmem.depend  extmem.layout  test.c
Lab Code/Exp5/extmem-c2/data/: 340.blk  341.blk  342.blk  344.blk  345.blk  348.blk  350.blk  351.blk  352.blk  400.blk  401.blk  403.blk  404.blk  406.blk  407.blk  409.blk  413.blk  414.blk  416.blk  417.blk  419.blk  421.blk  426.blk  427.blk  429.blk  431.blk  432.blk  433.blk  436.blk  437.blk  438.blk  439.blk  440.blk  446.blk  447.blk  448.blk  450.blk  451.blk  452.blk  460.blk  (+37 more)
(+84 files in other folders)
